--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=1724, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/history.css" />
+    <link rel="stylesheet" type="text/css" href="css/addfunds.css" />
+    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Oswald:300");
 
@@ -57,9 +58,6 @@
         -webkit-font-smoothing: antialiased;
       }
 
-      .screen div {
-        -webkit-text-size-adjust: none;
-      }
 
       .container-center-vertical,
       .container-center-horizontal {
@@ -106,13 +104,13 @@
       }
 
       .overlay {
-        position: relative;
+        position: absolute;
         opacity: 0;
         display: none;
         top: 0;
         width: 100%;
         height: 100%;
-        position: relative;
+        position: fixed;
       }
 
       .animate-appear {
@@ -227,13 +225,6 @@
       .border-1px-dove-gray {
         border: 1px solid var(--dove-gray);
       }
-      .oswald-light-nero-30px {
-        color: var(--nero);
-        font-family: var(--font-family-oswald);
-        font-size: var(--font-size-l);
-        font-style: normal;
-        font-weight: 300;
-      }
       .segoeui-regular-normal-nero-20px {
         color: var(--nero);
         font-family: var(--font-family-segoeui-regular);
@@ -243,124 +234,107 @@
       }
       :root {
         --dove-gray: rgba(112, 112, 112, 1);
-        --font-family-oswald: "Oswald", Helvetica;
         --font-family-segoeui-regular: "SegoeUI-Regular", Helvetica;
-        --font-size-l: 30px;
         --font-size-m: 20px;
+        --licorice: rgba(23, 22, 22, 1);
         --nero: rgba(12, 4, 4, 1);
       }
     </style>
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
+   
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="history" />
+    <input type="hidden" id="anPageName" name="page" value="addfunds" />
     <div class="container-center-horizontal">
-      <div class="history screen">
+      <div class="addfunds screen">
         <div class="flex-col-C61RwL">
           <div class="overlap-group-0xy0vn">
             <div class="black-top-rectangle-y1HRxC border-1px-dove-gray"></div>
             <div class="yellow-thin-rectangle-y1HRxC border-1px-dove-gray"></div>
             <div class="grey-back-y1HRxC"></div>
             <img class="swapslogoimage-transparent-y1HRxC" src="img/swaps-logo-image-transparent@1x.png" />
-            <div class="black-top-rectangle-pqRchW border-1px-dove-gray"></div>
-            <div class="yellow-thin-rectangle-pqRchW border-1px-dove-gray"></div>
+            <div class="black-top-rectangle-y1HRxC border-1px-dove-gray"></div>
+            <div class="yellow-thin-rectangle-y1HRxC border-1px-dove-gray"></div>
             <div class="swaps-fx-user-guide-y1HRxC">SwapsFx User Guide</div>
             <img class="line-1-y1HRxC" src="img/line-1@1x.png" />
             <div class="swaps-fx-portal-user-guide-y1HRxC">SwapsFx Portal <br />User Guide</div>
             <div class="everything-you-se-our-services-y1HRxC segoeui-regular-normal-nero-20px">
               Everything you need to know about how to use our service(s)
             </div>
-            <div class="history-transactions-y1HRxC">History (Transaction(s))</div>
+            <div class="add-funds-y1HRxC">Add Funds</div>
           </div>
-          <img class="line-8-0xy0vn" src="img/line-8@1x.png" />
-          <img class="image-27-0xy0vn" src="img/image-27@1x.png" />
-          <img class="line-14-0xy0vn" src="img/line-14@1x.png" />
+         
         </div>
         <div class="flex-row-C61RwL">
           <div class="flex-col-dXBp89">
-            <div class="funds-history-0PZcXW oswald-light-nero-30px">Funds History</div>
-            <div class="group-25-0PZcXW">
-              <div class="ellipse-59-9DCiFf"></div>
-              <div class="hover-click-on-ailable-options-9DCiFf segoeui-regular-normal-nero-20px">
-                Hover / click on the &#34;History&#34; menu to expose available options
+            <div class="adding-funds-to-ounts-made-easy-0PZcXW">Adding funds to your account(s) made easy</div>
+            <div class="group-10-0PZcXW">
+              <div class="ellipse-13-6G7QO0"></div>
+              <div class="click-on-the-wa-account-option-6G7QO0 segoeui-regular-normal-nero-20px">
+                Click on the wallet dropdown, and select a desired account option.
               </div>
-              <div class="ellipse-60-9DCiFf"></div>
-              <div class="select-funds-hi-selection-tile-9DCiFf segoeui-regular-normal-nero-20px">
-                Select &#34;Funds History&#34; and wait for pop-up currency selection tile
-              </div>
-              <div class="ellipse-61-9DCiFf"></div>
-              <div class="choose-the-wall-cy-tile-to-view-9DCiFf segoeui-regular-normal-nero-20px">
-                Choose the wallet currency tile to view
+              <div class="ellipse-14-6G7QO0"></div>
+              <div class="select-the-paym-ent-by-currency-6G7QO0 segoeui-regular-normal-nero-20px">
+                Select the payment channel (different by currency)
               </div>
             </div>
-            <div class="overlap-group2-0PZcXW">
-              <div class="available-filters-search-BxCq5y segoeui-regular-normal-nero-20px">
-                Available Filter(s) / Search:
+            <div class="group-9-0PZcXW">
+              <div class="x1-wcA9lP segoeui-regular-normal-nero-20px">1.</div>
+              <div class="click-on-the-wa-account-option-wcA9lP segoeui-regular-normal-nero-20px">
+                Click on the wallet dropdown, and select a desired account option.
               </div>
-              <div class="group-24-BxCq5y">
-                <div class="ellipse-57-CX8jfd"></div>
-                <div class="date-range-CX8jfd">Date Range</div>
-                <div class="ellipse-58-CX8jfd"></div>
-                <div class="free-text-search-CX8jfd">Free text search</div>
+              <div class="x2-wcA9lP segoeui-regular-normal-nero-20px">2.</div>
+              <div class="select-the-paym-ent-by-currency-wcA9lP segoeui-regular-normal-nero-20px">
+                Select the payment channel (different by currency)
+              </div>
+            </div>
+            <div class="group-11-0PZcXW">
+              <div class="ellipse-15-aewt80"></div>
+              <div class="manual-payments-nto-your-wallet-aewt80">
+                Manual payments (interac / bank transfer / etc.) will display the corresponding description to complete
+                payment into your wallet
+              </div>
+              <div class="ellipse-16-aewt80"></div>
+              <div class="automatic-payme-for-transaction-aewt80">
+                Automatic payments (credit / debit card(s)) will redirect you to our payment partner securely for
+                transaction
+              </div>
+            </div>
+            <div class="automatic-payme-dit-debit-cards-0PZcXW">Automatic Payment Option (Credit / Debit Card(s))</div>
+            <div class="group-13-0PZcXW">
+              <div class="ellipse-21-XawMdy"></div>
+              <div class="enter-the-deposit-amount-value-XawMdy segoeui-regular-normal-nero-20px">
+                Enter the deposit amount value
+              </div>
+              <div class="ellipse-22-XawMdy"></div>
+              <div class="click-on-initia-eposit-to-begin-XawMdy segoeui-regular-normal-nero-20px">
+                Click on Initialize Deposit to begin
+              </div>
+              <div class="ellipse-23-XawMdy"></div>
+              <div class="confirm-deposit-e-prompt-window-XawMdy segoeui-regular-normal-nero-20px">
+                Confirm deposit via the prompt window
+              </div>
+            </div>
+            <div class="group-12-0PZcXW">
+              <div class="ellipse-24-yS0cYZ"></div>
+              <div class="wait-to-see-this-window-yS0cYZ segoeui-regular-normal-nero-20px">Wait to see this window</div>
+              <div class="ellipse-25-yS0cYZ"></div>
+              <div class="complete-the-re-ard-information-yS0cYZ segoeui-regular-normal-nero-20px">
+                Complete the required card information
+              </div>
+              <div class="ellipse-26-yS0cYZ"></div>
+              <div class="click-pay-yS0cYZ segoeui-regular-normal-nero-20px">Click Pay</div>
+              <div class="ellipse-27-yS0cYZ"></div>
+              <div class="you-will-be-red-tal-to-continue-yS0cYZ segoeui-regular-normal-nero-20px">
+                You will be redirected to SwapsFx Portal to continue
               </div>
             </div>
           </div>
-          <img class="image-28-dXBp89" src="img/image-28@1x.png" />
-        </div>
-        <img class="line-15-C61RwL" src="img/line-15@1x.png" />
-        <div class="order-history-C61RwL oswald-light-nero-30px">Order History</div>
-        <div class="flex-row-VMr6Om">
-          <img class="image-29-BdpSxK" src="img/image-29@1x.png" />
-          <div class="group-26-BdpSxK">
-            <div class="ellipse-62-PyC6bq"></div>
-            <div class="hover-click-on-ailable-options-PyC6bq segoeui-regular-normal-nero-20px">
-              Hover / click on the &#34;History&#34; menu to expose available options
-            </div>
-            <div class="ellipse-63-PyC6bq"></div>
-            <div class="select-order-hi-se-the-sub-menu-PyC6bq segoeui-regular-normal-nero-20px">
-              Select &#34;Order History&#34; to expose the sub-menu
-            </div>
-            <div class="ellipse-64-PyC6bq"></div>
-            <div class="choose-the-desi-d-category-type-PyC6bq segoeui-regular-normal-nero-20px">
-              Choose the desired category type
-            </div>
-            <div class="ellipse-65-PyC6bq"></div>
-            <div class="wait-for-inform-tion-to-display-PyC6bq segoeui-regular-normal-nero-20px">
-              Wait for information to display
-            </div>
-          </div>
-        </div>
-        <img class="image-30-C61RwL" src="img/image-30@1x.png" />
-        <div class="view-more-information-on-order-C61RwL oswald-light-nero-30px">View more information on order</div>
-        <div class="group-27-C61RwL">
-          <div class="ellipse-66-BKbGut"></div>
-          <div class="click-the-targe-et-more-details-BKbGut segoeui-regular-normal-nero-20px">
-            Click the target order ID to get more details
-          </div>
-          <div class="ellipse-67-BKbGut"></div>
-          <div class="download-order-ceipt-if-needed-BKbGut segoeui-regular-normal-nero-20px">
-            Download order receipt if needed
-          </div>
-        </div>
-        <img class="image-31-C61RwL" src="img/image-31@1x.png" />
-        <img class="line-16-C61RwL" src="img/line-15@1x.png" />
-        <div class="overlap-group1-C61RwL">
-          <div class="within-the-summ-er-history-view-RH0WJ5 segoeui-regular-normal-nero-20px">
-            Within the &#34;Summary&#34; section of the active order history view
-          </div>
-          <div class="to-cancel-and-active-order-RH0WJ5 oswald-light-nero-30px">To CANCEL and active order</div>
-          <img class="image-32-RH0WJ5" src="img/image-32@1x.png" />
-          <div class="group-28-RH0WJ5">
-            <div class="ellipse-68-PiOlGO"></div>
-            <div class="click-the-cance-der-to-complete-PiOlGO segoeui-regular-normal-nero-20px">
-              Click the &#34;Cancel Order&#34; to complete
-            </div>
-            <div class="ellipse-69-PiOlGO"></div>
-            <div class="confirm-the-not-of-cancellation-PiOlGO segoeui-regular-normal-nero-20px">
-              Confirm the notice of cancellation
-            </div>
+          <div class="flex-col-Xi618D">
+            <img class="image-13-y0eQTV" src="img/image-13@1x.png" />
+            <img class="image-14-y0eQTV" src="img/image-14@1x.png" />
           </div>
         </div>
+        <img class="image-15-C61RwL" src="img/image-15@1x.png" />
       </div>
     </div>
   </body>
