--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
               Everything you need to know about how to use our service(s)
             </div>
             <div class="add-funds-y1HRxC">Add Funds</div>
+            <img class="line-8-0xy0vn" src="img/line-8@1x.png" />
+          
           </div>
          
         </div>
@@ -269,11 +271,11 @@
             <div class="adding-funds-to-ounts-made-easy-0PZcXW">Adding funds to your account(s) made easy</div>
             <div class="group-10-0PZcXW">
               <div class="ellipse-13-6G7QO0"></div>
-              <div class="click-on-the-wa-account-option-6G7QO0 segoeui-regular-normal-nero-20px">
+              <div class="click-on-the-wa-account-option-6G7QO0 segoeui-regular-normal-nero-20px words">
                 Click on the wallet dropdown, and select a desired account option.
               </div>
               <div class="ellipse-14-6G7QO0"></div>
-              <div class="select-the-paym-ent-by-currency-6G7QO0 segoeui-regular-normal-nero-20px">
+              <div class="select-the-paym-ent-by-currency-6G7QO0 segoeui-regular-normal-nero-20px words">
                 Select the payment channel (different by currency)
               </div>
             </div>
