--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
-    <link rel="stylesheet" type="text/css" href="css/withdrawfunds.css" />
+    <link rel="stylesheet" type="text/css" href="css/myaccount.css" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Oswald:300");
 
@@ -230,7 +230,6 @@
       .segoeui-regular-normal-nero-20px {
         color: var(--nero);
         font-family: var(--font-family-segoeui-regular);
-        font-size: var(--font-size-m);
         font-style: normal;
         font-weight: 400;
       }
@@ -244,107 +243,37 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="withdrawfunds" />
+    <input type="hidden" id="anPageName" name="page" value="myaccount" />
     <div class="container-center-horizontal">
-      <div class="withdrawfunds screen">
-        <div class="flex-col-C61RwL">
-          <div class="flex-col-0xy0vn">
-            <div class="flex-col-xpmbvu">
-              <div class="overlap-group-zHcrMx">
-                <div class="black-top-rectangle-5sTxFf border-1px-dove-gray"></div>
-                <div class="yellow-thin-rectangle-5sTxFf border-1px-dove-gray"></div>
-                <div class="grey-back-5sTxFf"></div>
-                <img class="swapslogoimage-transparent-5sTxFf" src="img/swaps-logo-image-transparent@1x.png" />
-                <div class="black-top-rectangle-BM6xrx border-1px-dove-gray"></div>
-                <div class="yellow-thin-rectangle-BM6xrx border-1px-dove-gray"></div>
-                <div class="swaps-fx-user-guide-5sTxFf">SwapsFx User Guide</div>
-                <img class="line-1-5sTxFf" src="img/line-1@1x.png" />
-                <div class="swaps-fx-portal-user-guide-5sTxFf">SwapsFx Portal <br />User Guide</div>
-                <div class="everything-you-se-our-services-5sTxFf segoeui-regular-normal-nero-20px">
-                  Everything you need to know about how to use our service(s)
-                </div>
-                <div class="withdraw-funds-5sTxFf">Withdraw Funds</div>
-              </div>
-              <img class="line-8-zHcrMx" src="img/line-8@1x.png" />
-            </div>
-            <div class="flex-row-xpmbvu">
-              <div class="flex-col-fKmFVR">
-                <div class="taking-out-fund-ounts-made-easy-Sxvg86">
-                  Taking out funds from your account(s) made easy
-                </div>
-                <div class="group-14-Sxvg86">
-                  <div class="ellipse-28-p8MuxV"></div>
-                  <div class="select-the-desi-he-account-type-p8MuxV segoeui-regular-normal-nero-20px">
-                    Select the desired currency account (currency type determines the account type)
-                  </div>
-                  <div class="ellipse-29-p8MuxV"></div>
-                  <div class="select-the-acco-nt-type-channel-p8MuxV segoeui-regular-normal-nero-20px">
-                    Select the account type channel
-                  </div>
-                  <div class="ellipse-30-p8MuxV"></div>
-                  <div class="enter-the-desired-amount-p8MuxV segoeui-regular-normal-nero-20px">
-                    Enter the desired amount
-                  </div>
-                  <div class="ellipse-31-p8MuxV"></div>
-                  <div class="click-initiate-withdrawal-p8MuxV segoeui-regular-normal-nero-20px">
-                    Click initiate withdrawal
-                  </div>
-                </div>
-              </div>
-              <img class="image-16-fKmFVR" src="img/image-16@1x.png" />
-            </div>
+      <div class="myaccount screen">
+        <div class="overlap-group-C61RwL">
+          <div class="black-top-rectangle-4eduM0 border-1px-dove-gray"></div>
+          <div class="yellow-thin-rectangle-4eduM0 border-1px-dove-gray"></div>
+          <div class="grey-back-4eduM0"></div>
+          <img class="swapslogoimage-transparent-4eduM0" src="img/swaps-logo-image-transparent@1x.png" />
+          <div class="black-top-rectangle-BJQsbv border-1px-dove-gray"></div>
+          <div class="yellow-thin-rectangle-BJQsbv border-1px-dove-gray"></div>
+          <div class="swaps-fx-user-guide-4eduM0">SwapsFx User Guide</div>
+          <img class="line-1-4eduM0" src="img/line-1@1x.png" />
+          <div class="swaps-fx-portal-user-guide-4eduM0">SwapsFx Portal <br />User Guide</div>
+          <div class="everything-you-se-our-services-4eduM0 segoeui-regular-normal-nero-20px">
+            Everything you need to know about how to use our service(s)
           </div>
-          <div class="flex-row-0xy0vn">
-            <div class="flex-col-GyJUNH">
-              <div class="missing-withdrawal-account-3xHcwy">Missing withdrawal account?</div>
-              <div class="group-15-3xHcwy">
-                <div class="ellipse-32-vEJZo4"></div>
-                <div class="you-can-create-essage-as-shown-vEJZo4 segoeui-regular-normal-nero-20px">
-                  You can create an account directly from the prompted message (as shown)
-                </div>
-                <div class="ellipse-33-vEJZo4"></div>
-                <div class="you-will-be-red-account-window-vEJZo4 segoeui-regular-normal-nero-20px">
-                  You will be redirected to the Setup Withdrawal Account window
-                </div>
-              </div>
-              <div class="setup-withdrawal-account-3xHcwy">Setup Withdrawal Account</div>
-            </div>
-            <img class="image-17-GyJUNH" src="img/image-17@1x.png" />
-          </div>
-          <img class="line-11-0xy0vn" src="img/line-8@1x.png" />
-          <div class="flex-row-oV5UrE">
-            <img class="image-18-QkTteQ" src="img/image-18@1x.png" />
-            <div class="group-16-QkTteQ">
-              <div class="ellipse-34-vvCDiG"></div>
-              <div class="select-the-currency-vvCDiG segoeui-regular-normal-nero-20px">Select the currency</div>
-              <div class="ellipse-35-vvCDiG"></div>
-              <div class="select-the-account-type-vvCDiG segoeui-regular-normal-nero-20px">Select the account type</div>
-              <div class="ellipse-36-vvCDiG"></div>
-              <div class="complete-the-co-selected-above-vvCDiG segoeui-regular-normal-nero-20px">
-                Complete the corresponding option displayed based on the choice selected above
-              </div>
-              <div class="ellipse-37-vvCDiG"></div>
-              <div class="click-setup-wit-ton-to-complete-vvCDiG segoeui-regular-normal-nero-20px">
-                Click Setup Withdrawal Account button to complete
-              </div>
-            </div>
-          </div>
+          <div class="my-account-management-4eduM0">My Account Management</div>
         </div>
-        <div class="flex-row-C61RwL">
-          <div class="flex-col-dXBp89">
-            <div class="to-remove-a-withdrawal-account-0PZcXW">To remove a withdrawal account</div>
-            <div class="group-17-0PZcXW">
-              <div class="ellipse-38-7VPqCY"></div>
-              <div class="click-on-the-re-he-account-type-7VPqCY segoeui-regular-normal-nero-20px">
-                Click on the remove button by the account type
-              </div>
-              <div class="ellipse-39-7VPqCY"></div>
-              <div class="confirm-action-omplete-removal-7VPqCY segoeui-regular-normal-nero-20px">
-                Confirm action to complete removal
-              </div>
-            </div>
+        <img class="line-8-C61RwL" src="img/line-8@1x.png" />
+        <img class="image-12-C61RwL" src="img/image-12@1x.png" />
+        <div class="group-2-C61RwL">
+          <div class="one-stop-view-o-nts-by-currency-zUixHA">One stop view of your account(s) by currency</div>
+          <div class="you-can-manage-s-from-one-page-zUixHA segoeui-regular-normal-nero-20px">
+            You can manage your accounts from one page
           </div>
-          <img class="image-19-dXBp89" src="img/image-19@1x.png" />
+          <div class="group-8-zUixHA">
+            <div class="ellipse-9-j2aF3b"></div>
+            <div class="deposit-add-funds-j2aF3b segoeui-regular-normal-nero-20px">Deposit (Add) Funds</div>
+            <div class="ellipse-10-j2aF3b"></div>
+            <div class="withdraw-funds-j2aF3b segoeui-regular-normal-nero-20px">Withdraw Funds</div>
+          </div>
         </div>
       </div>
     </div>
