--- a/index.html
+++ b/index.html
@@ -293,19 +293,20 @@
             <div class="flex-col-GyJUNH">
               <div class="missing-withdrawal-account-3xHcwy">Missing withdrawal account?</div>
               <div class="group-15-3xHcwy">
-                <div class="ellipse-32-vEJZo4"></div>
+                <div class="ellipse-32-vEJZo4 ellip"></div>
                 <div class="you-can-create-essage-as-shown-vEJZo4 segoeui-regular-normal-nero-20px">
                   You can create an account directly from the prompted message (as shown)
                 </div>
-                <div class="ellipse-33-vEJZo4"></div>
+                <div class="ellipse-33-vEJZo4 ellip"></div>
                 <div class="you-will-be-red-account-window-vEJZo4 segoeui-regular-normal-nero-20px">
                   You will be redirected to the Setup Withdrawal Account window
                 </div>
               </div>
-              <div class="setup-withdrawal-account-3xHcwy">Setup Withdrawal Account</div>
-            </div>
+             </div>
             <img class="image-17-GyJUNH" src="img/image-17@1x.png" />
           </div>
+          <div class="setup-withdrawal-account-3xHcwy">Setup Withdrawal Account</div>
+            
           <img class="line-11-0xy0vn" src="img/line-8@1x.png" />
           <div class="flex-row-oV5UrE">
             <img class="image-18-QkTteQ" src="img/image-18@1x.png" />
