--- a/history.html
+++ b/history.html
@@ -230,7 +230,7 @@
       .oswald-light-nero-30px {
         color: var(--nero);
         font-family: var(--font-family-oswald);
-        font-size: var(--font-size-l);
+        font-size: 47px;
         font-style: normal;
         font-weight: 300;
       }
@@ -239,6 +239,7 @@
         font-family: var(--font-family-segoeui-regular);
         font-style: normal;
         font-weight: 400;
+        font-size: 22px;
       }
       :root {
         --dove-gray: rgba(112, 112, 112, 1);
@@ -276,17 +277,17 @@
        
         <div class="flex-row-C61RwL">
           <div class="flex-col-dXBp89">
-            <div class="funds-history-0PZcXW oswald-light-nero-30px headings">Funds History</div>
+            <div class="funds-history-0PZcXW oswald-light-nero-30px">Funds History</div>
             <div class="group-25-0PZcXW">
-              <div class="ellipse-59-9DCiFf"></div>
+              <div class="ellipse-59-9DCiFf elip"></div>
               <div class="hover-click-on-ailable-options-9DCiFf segoeui-regular-normal-nero-20px">
                 Hover / click on the &#34;History&#34; menu to expose available options
               </div>
-              <div class="ellipse-60-9DCiFf"></div>
+              <div class="ellipse-60-9DCiFf elip"></div>
               <div class="select-funds-hi-selection-tile-9DCiFf segoeui-regular-normal-nero-20px">
                 Select &#34;Funds History&#34; and wait for pop-up currency selection tile
               </div>
-              <div class="ellipse-61-9DCiFf"></div>
+              <div class="ellipse-61-9DCiFf elip"></div>
               <div class="choose-the-wall-cy-tile-to-view-9DCiFf segoeui-regular-normal-nero-20px">
                 Choose the wallet currency tile to view
               </div>
@@ -296,46 +297,47 @@
                 Available Filter(s) / Search:
               </div>
               <div class="group-24-BxCq5y">
-                <div class="ellipse-57-CX8jfd"></div>
-                <div class="date-range-CX8jfd">Date Range</div>
-                <div class="ellipse-58-CX8jfd"></div>
-                <div class="free-text-search-CX8jfd">Free text search</div>
+                <div class="ellipse-57-CX8jfd elip"></div>
+                <div class="date-range-CX8jfd .segoeui-regular-normal-nero-20px">Date Range</div>
+                <div class="ellipse-58-CX8jfd elip"></div>
+                <div class="free-text-search-CX8jfd .segoeui-regular-normal-nero-20px">Free text search</div>
               </div>
             </div>
           </div>
           <img class="image-28-dXBp89" src="img/image-28@1x.png" />
         </div>
         <img class="line-15-C61RwL" src="img/line-15@1x.png" />
-        <div class="order-history-C61RwL oswald-light-nero-30px headings">Order History</div>
+        <div class="order-history-C61RwL oswald-light-nero-30px ">Order History</div>
         <div class="flex-row-VMr6Om">
           <img class="image-29-BdpSxK" src="img/image-29@1x.png" />
           <div class="group-26-BdpSxK">
-            <div class="ellipse-62-PyC6bq"></div>
+            <div class="ellipse-62-PyC6bq elip"></div>
             <div class="hover-click-on-ailable-options-PyC6bq segoeui-regular-normal-nero-20px">
               Hover / click on the &#34;History&#34; menu to expose available options
             </div>
-            <div class="ellipse-63-PyC6bq"></div>
+            <div class="ellipse-63-PyC6bq elip"></div>
             <div class="select-order-hi-se-the-sub-menu-PyC6bq segoeui-regular-normal-nero-20px">
               Select &#34;Order History&#34; to expose the sub-menu
             </div>
-            <div class="ellipse-64-PyC6bq"></div>
+            <div class="ellipse-64-PyC6bq elip"></div>
             <div class="choose-the-desi-d-category-type-PyC6bq segoeui-regular-normal-nero-20px">
               Choose the desired category type
             </div>
-            <div class="ellipse-65-PyC6bq"></div>
+            <div class="ellipse-65-PyC6bq elip"></div>
             <div class="wait-for-inform-tion-to-display-PyC6bq segoeui-regular-normal-nero-20px">
               Wait for information to display
             </div>
           </div>
         </div>
         <img class="image-30-C61RwL" src="img/image-30@1x.png" />
-        <div class="view-more-information-on-order-C61RwL oswald-light-nero-30px headings">View more information on order</div>
+        
         <div class="group-27-C61RwL">
-          <div class="ellipse-66-BKbGut"></div>
+          <div class="view-more-information-on-order-C61RwL oswald-light-nero-30px ">View more information on order</div>
+          <div class="ellipse-66-BKbGut elip"></div>
           <div class="click-the-targe-et-more-details-BKbGut segoeui-regular-normal-nero-20px">
             Click the target order ID to get more details
           </div>
-          <div class="ellipse-67-BKbGut"></div>
+          <div class="ellipse-67-BKbGut elip"></div>
           <div class="download-order-ceipt-if-needed-BKbGut segoeui-regular-normal-nero-20px">
             Download order receipt if needed
           </div>
@@ -344,16 +346,16 @@
         <img class="line-16-C61RwL" src="img/line-15@1x.png" />
         <div class="overlap-group1-C61RwL">
           <div class="words">
-             <div class="to-cancel-and-active-order-RH0WJ5 oswald-light-nero-30px headings">To CANCEL and active order</div>
+             <div class="to-cancel-and-active-order-RH0WJ5 oswald-light-nero-30px ">To CANCEL an active order</div>
             <div class="within-the-summ-er-history-view-RH0WJ5 segoeui-regular-normal-nero-20px">
               Within the &#34;Summary&#34; section of the active order history view
             </div>
             <div class="group-28-RH0WJ5">
-              <div class="ellipse-68-PiOlGO"></div>
+              <div class="ellipse-68-PiOlGO elip"></div>
               <div class="click-the-cance-der-to-complete-PiOlGO segoeui-regular-normal-nero-20px">
                 Click the &#34;Cancel Order&#34; to complete
               </div>
-              <div class="ellipse-69-PiOlGO"></div>
+              <div class="ellipse-69-PiOlGO elip"></div>
               <div class="confirm-the-not-of-cancellation-PiOlGO segoeui-regular-normal-nero-20px">
                 Confirm the notice of cancellation
               </div>
