--- a/myaccount.html
+++ b/myaccount.html
@@ -232,6 +232,7 @@
         font-family: var(--font-family-segoeui-regular);
         font-style: normal;
         font-weight: 400;
+        font-size: 25px;
       }
       :root {
         --dove-gray: rgba(112, 112, 112, 1);
