--- a/quicktrade.html
+++ b/quicktrade.html
@@ -326,7 +326,7 @@
               </div>
               <div class="ellipse-2-5ODmit elip"></div>
               <div class="select-any-of-t-ore-information-5ODmit segoeui-regular-normal-nero-20px word">
-                Select any of the active swap requests to view more <br />information
+                Select any of the active swap requests to view more information
               </div>
               <div class="ellipse-3-5ODmit elip"></div>
               <div class="view-your-reque-from-one-glance-5ODmit segoeui-regular-normal-nero-20px word">
